--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
               </li>
 
               <li class="nav-item me-2">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link" href="contact-us.html">Contact Us</a>
               </li>
               
     
