added news page

--- a/contact-us.html
+++ b/contact-us.html
@@ -26,7 +26,7 @@
               </li>
 
               <li class="nav-item me-2">
-                <a class="nav-link" href="projects.html">Projects</a>
+                <a class="nav-link" href="news.html">Latest News</a>
               </li>
 
               <li class="nav-item me-2">
@@ -95,7 +95,7 @@
           <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
             <div id="latest-news-text-block" class="px-3">
               <h2 class="text-center pb-3">Latest News</h2>
-              <p>Lorem ipsum dolor sit amet consectetur. Metus sagittis malesuada non pulvinar sit ipsum. Quam porta at eu feugiat.</p>
+              <p>Stay updated with the latest news from Vertex! From industry insights and project highlights to innovative trends in design and finishing, our updates keep you informed about what’s happening in the world of premium interiors and landscaping.</p>
              </div>
           </div>
         </div>
