--- a/news.html
+++ b/news.html
@@ -22,11 +22,11 @@
                 <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item me-2">
-                <a class="nav-link active" href="about-us.html">About Us</a>
+                <a class="nav-link" href="about-us.html">About Us</a>
               </li>
 
               <li class="nav-item me-2">
-                <a class="nav-link" href="news.html">Latest News</a>
+                <a class="nav-link active" href="news.html">Latest News</a>
               </li>
 
               <li class="nav-item me-2">
@@ -62,70 +62,53 @@
             Vertex delivers finishes that are visually striking and built to last.</p>
       </div>
       </div>
-
-      <div class="container-fluid px-0 px-xl-5 my-6" id="vision-mission">
-         <div class="row">
-            <div class="col-lg-6 d-flex align-items-center order-2 order-lg-1">
-                <div class="pt-5 py-lg-0 px-3 px-md-5">
-                    <h2 class="px-md-5 px-lg-0">Our Vision</h2>
-                    <p class="px-md-5 px-lg-0">To be the benchmark for excellence in finishing construction, 
-                        known for elevating spaces with meticulous attention to detail and a deep understanding of both aesthetics and functionality.</p>
-                </div>
-            </div>
-            <div class="col-lg-6 order-1 order-lg-2">
-              <img src="images/our-vision.jpg" class="img-fluid" alt="">
-            </div>
-         </div>
-
-         <div class="row my-6">
-            <div class="col-lg-6">
-                <img src="images/our-mission.jpg" class="img-fluid" alt="">
-              </div>
-            <div class="col-lg-6 d-flex align-items-center">
-                <div class="pt-5 py-lg-0 px-3 px-md-5">
-                    <h2 class="px-md-5 px-lg-0">Our Mission</h2>
-                    <p class="px-md-5 px-lg-0">Our mission is to deliver top tier finishing solutions that combine durability , 
-                        functionality and beauty. We aim to be the trusted partner for designers , 
-                        contractors, business and individuals who needs reliable and professional finishing that elevates their projects.</p>
-                </div>
-            </div>
-            
-         </div>
-      </div>
-
-      <div class="container-fluid py-5 px-5 px-lg-2 my-6" id="core-values">
-          <h1 class="text-center my-5">Core Values</h1>
-          <div class="row gy-5">
-            <div class="col-md-6 col-lg-3">
-                <div class="text-center">
-                    <i class="fa-solid fa-award"></i>
-                    <h2 class="my-3">Quality</h2>
-                    <p class="px-5 px-lg-0">Commitment to high standards in every project.</p>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="text-center">
-                    <i class="fa-solid fa-clock"></i>
-                    <h2 class="my-3">Timing</h2>
-                    <p class="px-5 px-lg-0">We prioritize delivering projects on time, without compromising quality.</p>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="text-center">
-                    <i class="fa-solid fa-compass-drafting"></i>
-                    <h2 class="my-3">Professionalism</h2>
-                    <p class="px-5 px-lg-0">Delivering services with integrity and expertise.</p>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="text-center">
-                    <i class="fa-solid fa-handshake"></i>
-                    <h2 class="my-3">Customer Focus</h2>
-                    <p class="px-5 px-lg-0">Tailoring solutions to meet the specific needs of our clients.</p>
-                </div>
+      
+      <div class="container-fluid my-6 px-md-5 px-lg-3 px-xl-5">
+        <div class="row mb-5">
+          <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+            <div id="latest-news-text-block" class="px-3">
+              <h2 class="text-center pb-3">Latest News</h2>
+              <p>Stay updated with the latest news from Vertex! From industry insights and project highlights to innovative trends in design and finishing, our updates keep you informed about what’s happening in the world of premium interiors and landscaping.</p>
+             </div>
+          </div>
+        </div>
+       <div class="row gy-3 gx-2 gx-xl-5">
+        <div class="col-lg-4">
+          <div class="card">
+            <img src="images/latest-news-1.jpg" class="card-img-top" alt="...">
+            <div class="card-body py-5 px-3 px-md-5 px-lg-3 px-xl-5">
+              <h4 class="card-title">Lorem ipsum dolor</h5>
+              <h5 class="card-subtitle">By John Doe</h6>
+              <p class="card-text my-3">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <button class="px-4 py-2">Learn more</button>
             </div>
           </div>
+         </div> 
+         <div class="col-lg-4">
+          <div class="card">
+            <img src="images/latest-news-2.jpg" class="card-img-top" alt="...">
+            <div class="card-body py-5 px-3 px-lg-3 px-xl-5">
+              <h4 class="card-title">Lorem ipsum dolor</h5>
+              <h5 class="card-subtitle">By John Doe</h6>
+              <p class="card-text my-3">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <button class="px-4 py-2">Learn more</button>
+            </div>
+          </div>
+         </div> 
+         <div class="col-lg-4">
+          <div class="card">
+            <img src="images/latest-news-3.jpg" class="card-img-top" alt="...">
+            <div class="card-body py-5 px-3 px-lg-3 px-xl-5">
+              <h4 class="card-title">Lorem ipsum dolor</h5>
+              <h5 class="card-subtitle">By John Doe</h6>
+              <p class="card-text my-3">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <button class="px-4 py-2">Learn more</button>
+            </div>
+          </div>
+         </div> 
+       </div>
       </div>
+
       <footer class="container-fluid py-5 px-lg-5">
         <div class="row gy-5">
           <div class="col-md-3">
@@ -194,6 +177,5 @@
         </div>
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/ad51f65d17.js" crossorigin="anonymous"></script>
   </body>
 </html>
